# lidar_labeling

./: .gitattributes  .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-bootstrap-lock.txt  requirements-dev-lock.txt  requirements-lock.txt  run_gui.bat  run_linux.sh  run_merged_sample.bat  run_windows.bat  setup_linux.sh  setup_windows.bat
configs/: default.json
docs/: 01_PRODUCT_SPEC.md  02_ARCHITECTURE.md  03_DATA_CONTRACTS.md  04_OPEN_DECISIONS.md  05_IMPLEMENTATION_PLAN.md  06_INTERACTION_SPEC.md  07_PROJECT_REVIEW.md  08_DISTRIBUTION_PLAN.md  09_CALIBRATION_PLAN.md  10_SAMPLE_DATA_AUDIT.md  11_DEVICE_CENTRIC_INPUT.md  12_EXISTING_LABEL_WORKFLOW.md  13_PRE_IMPLEMENTATION_AUDIT.md  14_UX_SAFETY_SPEC.md  15_IMPLEMENTATION_STATUS.md  16_IMPLEMENTATION_REVIEW.md  17_WINDOWS_PORTABLE_BUILD.md  18_PREFLIGHT_AND_QA.md  19_TRIAL_RUN_MANUAL.md  20_ONE_CHIP_CONVERSION_MANUAL.md  21_COMMIT_UPDATE_LOG.md  22_PORTABLE_DISTRIBUTION_CHECKLIST.md  23_PORTABLE_RELEASE_MANUAL.md  24_REQUIREMENTS_REAUDIT.md  25_INTEGRATED_DESKTOP_WORKFLOWS.md  26_ONEFILE_RELEASE_MANUAL.md  27_INTEGRATED_RELEASE_VERIFICATION.md  28_LINUX_PORTABLE_BUILD.md  29_LINUX_RELEASE_VERIFICATION.md  30_GITHUB_RELEASE.md  31_LAB_SOURCE_SETUP.md  USER_MANUAL.md
local_data/: README.md
packaging/: README.md  build_linux_portable.sh  build_windows_portable.ps1  linux_build_constraints.txt  linux_entry.py  package_linux_release.sh  package_windows_onefile_release.ps1  package_windows_release.ps1  release_notes_v0.2.1.md  release_notes_v0.2.2.md  windows_build_constraints.txt  (+2 more)
(+124 files in other folders)
