[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lidar-label-tool"
version = "0.1.0"
description = "Multi-LiDAR and camera 3D bounding box labeling tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10"
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.8,<7",
  "pyqtgraph>=0.13,<0.15",
  "PyOpenGL>=3.1"
]
validation = ["jsonschema>=4.20"]
dev = ["pytest>=8", "ruff>=0.8", "mypy>=1.13"]
portable = ["pyinstaller>=6,<7"]

[project.scripts]
lidar-label-tool = "lidar_label_tool.app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
check_untyped_defs = true
